ci: single_binary_target_arm
Signed-off-by: Pierrick Bouvier <pierrick.bouvier@linaro.org>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - master
+      - single_binary_target_arm
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
